--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { "name": "parse-simple-svg-meta-pmb",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Given the source of a simple SVG image, find basic info about its outermost SVG tag.",
   "keywords": [
     "svg"
@@ -16,15 +16,21 @@
   },
   "contributors": [],
 
-  "private": true, "license": "ISC",
+  "private": false, "license": "ISC",
 
-  "main": "omst.js",
+  "main": "omst.mjs",
   "scripts": { "test": "elp && nodemjs test/all.mjs" },
   "directories": { "test": "test" },
   "eslintConfig": { "extends": "nodejs-pmb" },
 
   "dependencies": {},
   "devDependencies": {
+    "equal-pmb": "^0.1.24",
+    "eslint-config-nodejs-pmb": "^0.2.3",
+    "eslint-pretty-pmb": "^1.0.2",
+    "nodemjs": "^0.1.9",
+    "p-fatal": "^0.1.3",
+    "usnam-pmb": "^0.2.5"
   },
 
 
